--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-dialog": "^1.1.4",
+    "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "next": "15.1.4",
     "react": "^19.0.0",
